# poetry-githooks

./: README.md  pyproject.toml
.github/workflows/: ci.yml
poetry_githooks/: __init__.py  helpers.py  hooks.py  settings.py
tests/: test_helpers.py
