[tool.poetry]
name = "poetry-githooks"
version = "2.0.0"
description = "Simple git hooks with poetry"
authors = ["Thomas Thiebaud <thiebaud.tom@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thomasthiebaud/poetry-githooks"
repository = "https://github.com/thomasthiebaud/poetry-githooks"
documentation = "https://github.com/thomasthiebaud/poetry-githooks"
keywords = ["git", "hook", "githooks", "poetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
toml = "^0.10.2"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mamba = "^0.11.2"
taskipy = "^1.9.0"

[tool.poetry.scripts]
githooks = "poetry_githooks:cli"

[tool.taskipy.tasks]
lint = "black ."
"lint:check" = "black . --check"
test = "mamba --format=documentation tests/*"

[tool.githooks]
pre-commit = "black . --check"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
